<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rsb="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    android:background="@drawable/bg_edittext_white">

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/filter_cars"
                android:textColor="@color/line"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="end"
                android:background="@drawable/ic_baseline_close_24"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/closeimage" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/ll_top"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_top"
            android:layout_marginBottom="@dimen/_45sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_border_black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_odd_even"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text="@string/odd_even"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text="@string/year"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black" />
            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/fl_lmain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_odd_even"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_odd"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@drawable/bg_edittext_gray"
                            android:gravity="center"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp"
                            android:text="@string/odd"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/tv_even"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@drawable/bg_edittext_gray"
                            android:gravity="center"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp"
                            android:text="@string/even"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_20sdp"
                            android:text="@string/fix_price_range"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11sdp" />

                        <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                            android:id="@+id/rangeSeekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="0.5dp"
                            app:bar_color="@color/line"
                            app:bar_highlight_color="@color/black"
                            app:data_type="_integer"
                            app:gap="100"
                            app:max_value="10000"
                            app:min_value="0"
                            rsb:left_thumb_image="@drawable/ic_grey_dot"
                            rsb:left_thumb_image_pressed="@drawable/ic_grey_dot"
                            rsb:right_thumb_image="@drawable/ic_grey_dot"
                            rsb:right_thumb_image_pressed="@drawable/ic_grey_dot" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvmin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />

                            <TextView
                                android:id="@+id/tvmax"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/et_year"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:autofillHints=""
                            android:background="@drawable/bg_edittext_white"
                            android:gravity="center"
                            android:hint="@string/_2002"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_white"
                android:gravity="center"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:text="@string/rest"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/btn_apply"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_white"
                android:gravity="center"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:text="@string/apply"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>






